<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary_text_disabled_material_light"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#222"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_catalog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/text_catalog"
                android:textColor="@color/switch_thumb_normal_material_light"
                android:textColorHighlight="@color/secondary_text_default_material_light"
                android:textSize="24sp"

                />
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_01"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/button_1"
                    android:src="@drawable/king_smoke" />

                <Button
                    android:id="@+id/button_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/img_01"
                    android:layout_toRightOf="@+id/img_01"
                    android:text="@string/button_1" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_02"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/button_2"
                    android:src="@drawable/king_smoke" />

                <Button
                    android:id="@+id/button_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/img_02"
                    android:layout_toRightOf="@+id/img_02"
                    android:text="@string/button_2" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_03"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/button_3"
                    android:src="@drawable/king_smoke" />

                <Button
                    android:id="@+id/button_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/img_03"
                    android:layout_toRightOf="@+id/img_03"
                    android:text="@string/button_3" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_04"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/button_4"
                    android:src="@drawable/king_smoke" />

                <Button
                    android:id="@+id/button_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/img_04"
                    android:layout_toRightOf="@+id/img_04"
                    android:text="@string/button_4" />
            </RelativeLayout>
        </LinearLayout>


    </LinearLayout>

</FrameLayout>